[tool.poetry]
name = "filefox"
version = "0.5.0"
description = "Python file toolbox."
authors = ["Yevgnen Koh <wherejoystarts@gmail.com>"]
packages = [ { include = "filefox" } ]

[tool.poetry.dependencies]
python = "^3.8"
pytoml = "^0.1.21"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
jedi-language-server = "0.21.0"
nose2 = "^0.10.0"
pre-commit = "^2.10.0"
pylint = "^2.6.0"
Sphinx = "^3.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
